--- a/css/style.css
+++ b/css/style.css
@@ -79,262 +79,194 @@ nav button:hover{
     /* background-color: blueviolet; */
 
 }
+
 #hero{
-    background-image: url(../assests/images/pexels-alexy-almond-3758026.jpg);
-    width: 100vw;
-    height: 100vh;
-    background-repeat: no-repeat;
-    /* background-size: cover; */
-    background-size: 100%  100%;
+  background-image: url(../assests/images/products5.jpg);
+  width: 100vw;
+  height: 100vh;
+  background-repeat: no-repeat;
+  /* background-size: cover; */
+  background-size: 100%  100%;
+
 }
-
-
-.about1 {
-  display: flex;
-  height: 100vh; /* Make the section take the full viewport height */
-  margin: 0; /* Remove default margin */
-}
-
-.flex-container {
-  display: flex;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height of the section */
-}
-
-.flex-container > div {
-  flex: 1; /* Each div takes up equal space */
-  margin: 0; /* Remove any gaps between divs */
-  padding: 0; /* Remove internal padding */
-}
-
-.flex-container img {
+#hero-overlay{
+  background-color: rgba(0, 0, 0, 0.1);
+  height: 100%;
   width: 100%;
-  height: 100%; /* Ensure the image fills the height */
-  object-fit: cover; /* Maintain aspect ratio and cover the area */
-  display: block; /* Remove inline spacing issues */
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 20px;
 }
-
 #about{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 80px;
-  }
-  #about-image{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 80px;
+}
+#about-image{
   width: 40%;
   height: 450px;
-  border-radius: 90px 0 0 0;
-  /* border-top-left-radius: 80px; */
-  /* border-bottom-left-radius: 20px; */
+  border-radius: 50px;
   transition: transform 0.3s ease;
   overflow-clip-margin: content;
   overflow: clip;
   }
-
-
-  .img-cap{
-    position: absolute;
-    /* position: fixed; */
-    bottom: -95%;
-     left: 33%;
-    width: 150px;
-    height: 150px;
-    /* padding: 18px 10px; */
-    padding: 15px;
-    background: #B40000;
-    text-align: center;
-    border: #d61c22 1px;
-}
-.img-cap span{
-    color: #fff;
-    font-size: 76px;
-    font-weight: 900;
-    line-height: 1;
-    margin-bottom: 5px;
-}
-.img-cap p{
-    font-size: 18px;
-    color: #fff;
-    font-weight: 200;
-    line-height: 1.4;
-}
-  /* #about-image:hover{
+  #about-image:hover{
     transform:scale(0.9)
-  } */
-  #about-text{
-    margin: 0;
-}
-  .sub-header{
-    display: flex;
-    flex-direction: column;
-    /* align-items: center; */
-    text-align: center;
-    }
-    .sub-header span{
-      color:#ff5a00;
-      font-size: 30px;
-      padding-bottom: 20px;
-      /* margin-bottom: 40px; */
-      /* line-height: 1.2; */
-    }
-
-    /* .sub-header :nth-child(2){
-      color: #222222;
-      font-size: 50px;
-      line-height: 1.2;
-      text-transform: uppercase;
-      letter-spacing: 6px;
-      padding-bottom: 30px; */
-    /* } */
-    #sub-header-text{
-      font-family: Baskervville, serif;  
-      text-align: center;
-      align-items: center;
-      align-content: center;
-      font-weight: 200px;
-      font-size: 15px;
-      line-height: 2.0;
-      color: #6B5A5A;
-    }
-    .sub-header1{
-        display: flex;
-        text-align: center;
-        color:#ff5a00;
-      font-size: 40px;
-      justify-content: center;
-
-    }
-    #about-text img{
-      display: flex;
-      padding-left: 70px;
-    }
-    #sign{
-      display: flex;
-      padding-left: 60px;
-      font-size: 20px;
-      font-family: Baskervville, serif;
-      font-weight: 200px;
-      line-height: 1.8;
-      color:black;
-      margin-top: 20px;
-    }
-    
-    .flex-container{
-        margin-top: 50px;
-        display: flex;
-        flex-direction: row;
-        background-color: white;
-        justify-content: center;
-        align-items: center;
-        column-gap: 40px;
-        margin-right: 100px;
-        margin-left: 100px;
-      }
-      .flex-container > div {
-      width: 30%;
-      margin: 10px;
-      border-radius: 10px;
-      overflow: hidden;
-      }
-      .flex-container img {
-        width: 100%;
-        height: auto;
-      }
-      .head1:hover{
-        color: #d61c22;
-      }
-      .para1{
-        /* margin: 140px; */
-        text-align: left;
-        font-family: "Montserrat";
-        font-weight: 400px;
-        font-size: 15px;
-        /* line-height: 1.7px; */
-        color: #666666;
-        margin: 0px;
-      }
-      #grid-form {
-        width: 100vw;
-        background-color: #F8F4F4;
-       padding: 100px;
-      }
-      #grid-container {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 10px;
-      }
-      #sub-header {
-        display: flex;
-        text-align: center;
-        flex-direction: column;
-        color: #2D0000;
-      }
-      #gridform-main {
-        display: flex;
-        justify-content: space-between;
-        gap: 20px;
-      }
-      .grid-item {
-        /* display: grid; */
-        /* gap: 20px; */
-        text-align: center;
-        /* max-width: 500px; */
-        padding: 20px;
-        background-color: white;
-      }
-      .grid-item img{
-        width: 50px;
-      }
-
-      #form-container {
-        background-color: #B40000;
-        border-top-right-radius: 130px;
-        padding: 20px; /* Add padding for better spacing */
-      }
-   #container {
-    position: relative;
   }
 
-    #form-head p {
-        color: white; /* Make the text color white for better contrast */
-    }
-    #input-grid .form-item, #message {
-        margin-bottom: 15px; /* Add spacing between form items */
-    }
-    #mbutton {
-        display: block;
-        width: 100%;
-        background-color: white;
-        color: #B40000;
-        border: none;
-        padding: 10px;
-        font-size: 16px;
-        border-radius: 5px;
-    }
-    #mbutton:hover {
-        background-color: #f1f1f1;
-    }
-    /* .parag1{
-      color: #6B5A5A;
-    font-size: 18px;
-    font-weight: 300;
-    margin-bottom: 38px;
-} */
-#parag1{
-  /* font-weight: 100; */
-    font-size: 24px;
-    color: #2D0000;
-    margin-bottom: 35px;
-    margin-top: 0;
-    font-family: "Roboto", sans-serif;
-    /* display: flex;
-    align-content: center;
-    align-items: center;
-    line-height: 2.0; */
-} 
-#parag2{
-  color: #6B5A5A;
-    font-size: 18px;
-    font-weight: 200;
-    margin-bottom: 38px;
+#about-text{
+  margin: 0;
 }
+.sub-header{
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  text-align: center;
+  }
+  .sub-header span{
+    color:#ff5a00;
+    font-size: 30px;
+    padding-bottom: 20px;
+    /* margin-bottom: 40px; */
+    /* line-height: 1.2; */
+  }
+
+  #sub-header-text{
+    font-family: Baskervville, serif;  
+    text-align: center;
+    align-items: center;
+    align-content: center;
+    font-weight: 200px;
+    font-size: 15px;
+    line-height: 2.0;
+    color: #6B5A5A;
+  }
+
+ 
+  .flex-container {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: left; 
+    position: relative;
+    /* right: 300px; */
+    align-items: center;
+    /* background: none;
+    background-color: none; */
+    row-gap: 90%;
+  padding: 20px;
+  }
+  
+  /* .flex-container-one {
+    display: flex;
+    flex-direction: row;
+    align-items: left;
+    row-gap: 90%;
+  }
+  .flex-container-one div{
+   background: none;
+   background-color: none;
+  } */
+  
+  
+  
+  .flex-container  div {
+    /* background-color: #f1f1f1; */
+    width: 80%; /* Adjusted to 30% for better fit within the flex container */
+    /* margin: 10px; */
+   border-radius: 20px;
+    overflow: hidden;
+    padding: 10px;
+  
+  }
+  
+  .flex-container  img {
+    width: 100%;
+  height: auto; /* Maintain aspect ratio / display: block; / Remove any extra space below the image */
+    }
+  
+  
+  
+  
+    
+    .head-one{
+      display: flex;
+  align-items: left;
+  font-family: Poppins;
+  /* font-weight: 200; */
+  /* font-weight: bold; */
+  font-size: 22px;
+  color: #333333;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+    }
+    .head-one:hover{
+    color: #d61c22; 
+    }
+
+    #hero-two{
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      overflow: hidden;
+      font-family: Montserrat;
+      font-weight: 400;
+      font-size: 18px;
+      color: #666666;
+      line-height: 1.7;
+    }
+    .swiper {
+      width: 100%;
+      height: 100%;
+      /* display: flex;
+      flex-direction: column; */
+    }
+    
+    .swiper-slide {
+      font-size: 12px;
+      font-family: Montserrat;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 120px;
+    }
+    
+    .swiper-slide img {
+      position: relative;
+      margin: auto;
+      background-size: cover;
+      /* object-fit: cover; */
+    }
+    .swiper-slide p{
+      font-family: Montserrat;
+      font-weight: 400;
+      font-size: 12px;
+      color: #222222;
+      text-transform:uppercase;
+      letter-spacing: 1px;
+    }
+
+    .image-one{
+      width: 9%;
+      height: 100px;
+      border: #d61c22 solid;
+      border-radius: 50%;
+    }
+    .txt12{
+      font-family: Montserrat;
+      font-weight: 400;
+      font-size: 18px;
+      color: #666666;
+      line-height: 1.7;
+    }
+    .star-review{
+      color: #d61c22;
+    }
