--- a/css/style.css
+++ b/css/style.css
@@ -659,38 +659,8 @@ justify-content: center;
   }
 
   #nav-links {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 10px; /* Add spacing between links */
-    margin: 10px 0;
-  }
-
-  #nav-links span a {
-    font-size: 16px;
-    color: #333; /* Ensure good contrast for text */
-    text-decoration: none;
-    padding: 5px 10px;
-  }
-
-  #nav-links span a:hover {
-    background-color: #f4f4f4; /* Highlight effect on hover */
-    border-radius: 5px;
-  }
-
-  nav button {
-    font-size: 14px;
-    padding: 10px 15px;
-    background-color: #F9B9DF; /* Primary button color */
-    color: white;
-    border: none;
-    border-radius: 5px;
-    margin-top: 10px;
-    cursor: pointer;
-  }
-
-  nav button:hover {
-    background-color: #F9B9DF; /* Darker hover effect */
+    display: none;
+   
   }
 
 
