--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-html {
-  scroll-behavior: smooth;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -9,21 +5,7 @@ html {
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
-  font-weight: 300;
-}
-
-#logo-container {
-  display: flex;
-  align-items: center;
-}
-
-#logo {
-  width: 100px;
-  height: 80px;
 }
 
 nav {
@@ -32,35 +14,29 @@ nav {
   padding: 20px 60px;
   background-color: white;
   position: fixed;
-  top: 0;
   width: 100%;
-  z-index: 9999; /* Ensure navbar stays on top */
+  top: 0;
+}
+
+#logo-container img {
+  width: 50px;
+  height: 50px;
 }
 
 #nav-links {
   display: flex;
-  column-gap: 40px;
+  column-gap: 80px;
   color: #2D0000;
   font-size: 18px;
 }
 
-#nav-links span {
-  padding-right: 20px; /* Removed extra padding */
-}
-
-nav img {
-  width: 7%;
-  padding-left: 50px;
-}
-
-#nav-links span a {
-  color: black;
+#nav-links a {
   text-decoration: none;
+  color: black;
   padding-bottom: 20px;
-  font-weight: 500;
 }
 
-#nav-links span a:hover {
+#nav-links a:hover {
   border-bottom: 3px solid #F9B9DF;
   color: #F9B9DF;
 }
@@ -641,30 +617,36 @@ justify-content: center;
 /* Adjusted Navbar Styles for Mobile */
 @media (max-width: 768px) {
   #nav-links {
-    display: none;
-    width: 100%;
-    text-align: center;
+    display: none; /* Hide by default */
     flex-direction: column;
     background-color: white;
     position: absolute;
     top: 80px;
     left: 0;
+    width: 100%;
     padding: 10px 0;
 }
 
-#nav-links span {
-    padding: 10px 0;
-}
-
-#nav-links span a {
-    color: black;
-    font-weight: 500;
-    font-size: 18px;
+#nav-links.show {
+    display: flex; /* Show when 'show' class is added */
 }
 
 #hamburger-menu {
     display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 30px;
+    height: 25px;
+    cursor: pointer;
 }
+
+#hamburger-menu span {
+    background-color: #333;
+    height: 3px;
+    width: 100%;
+    border-radius: 5px;
+}
+
 
 #nav-links.show {
     display: flex;
