Nav button updated

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ nav {
 nav button {
   background-color: white;
   height: fit-content;
-  border: 1px solid #B40000;
+  border: 1px solid #F9B9DF;
   padding: 11px 20px;
   text-transform: capitalize;
   font-size: 16px;
