--- a/css/style.css
+++ b/css/style.css
@@ -687,14 +687,15 @@ padding-top: 80px;
   #subtext-one {
     font-size: 28px; /* Adjust hero title size */
     font-weight: bold;
-    color: #eb31a0; /* Ensure text is readable against background */
+    color: #FEAAB9; /* Ensure text is readable against background */
     margin-bottom: 10px;
   }
 
   #subtext-two {
     font-size: 18px; /* Smaller subtitle size */
     font-weight: normal;
-    color: #eb31a0; /* Subtle contrast for subtitle */
+    color: #FEAAB9;
+    /*color: #eb31a0; /* Subtle contrast for subtitle */
     margin-bottom: 20px;
   }
 
