--- a/css/style.css
+++ b/css/style.css
@@ -643,12 +643,12 @@ justify-content: center;
 }
 
 .show-on-mobile {
-    display: inline-block;
+    display: flex;
 }
 
 #logo {
     display: block;
-    width: 80px;
+    width: 60px;
     height: auto;
 }
 
@@ -687,15 +687,15 @@ padding-top: 80px;
   #subtext-one {
     font-size: 28px; /* Adjust hero title size */
     font-weight: bold;
-    color: #FEAAB9; /* Ensure text is readable against background */
+    color: #eb31a0; /* Ensure text is readable against background */
     margin-bottom: 10px;
   }
 
   #subtext-two {
     font-size: 18px; /* Smaller subtitle size */
     font-weight: normal;
-    color: #FEAAB9;
-    /*color: #eb31a0; /* Subtle contrast for subtitle */
+    
+    color: #eb31a0; /* Subtle contrast for subtitle */
     margin-bottom: 20px;
   }
 
